# ai-human-communication-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.idea-explorer/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: README.md
logs/: execution_claude_transcript.jsonl  research_prompt.txt  resource_finder_claude_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
papers/: README.md
results/: analysis_summary.json  analysis_summary.txt  anova_results.json  evaluation_scores.csv  experiment1_format_20251214_185533.json  experiment2_length_20251214_185533.json  experiment3_progressive_20251214_185533.json  pairwise_analysis.json  pairwise_ttests.json  sampled_documents.json  strategy_stats.csv  summary_stats.csv
results/evaluations/: all_evaluations.json  pairwise_comparisons.json
results/summaries/: summaries_partial.json
src/: analyze.py  analyze_results.py  config.py  data_loader.py  evaluate.py  experiment.py  generate_summaries.py  llm_client.py  prompts.py  run_experiment.py  visualize.py
