[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for AI-to-Human Communication experiments"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.75.0",
    "datasets>=4.4.1",
    "httpx>=0.28.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "openai>=2.11.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
