[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for AI-to-Human communication experiments"
requires-python = ">=3.10"
dependencies = [
    "datasets",
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "seaborn",
    "openai",
    "httpx",
    "python-dotenv",
    "tenacity",
    "tqdm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
